--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
         </nav>
 
         <!-- Banner section -->
-        <header>Banner</header>
+        <header>
+            <div class="jumbotron">
+                <h1 class="display-6">Hello, I'm Bbosa</h1>
+                <p class="lead-8">I'm a software developer! I can help you build a product, feature or<br/> a website. Look through some of my work and experience! If you like what you see<br/> and have a project you need coded, don't hestitate to contact me.</p>
+                
+                <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+              </div>
+        </header>
         <section>My Work</section>
         <section>About Me</section>
         <footer>Contact Me</footer>
