--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Personal - v2.4.0
-  * Template URL: https://bootstrapmade.com/personal-free-resume-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -41,10 +35,10 @@
   <header id="header" class="header-tops">
     <div class="container">
 
-      <h1><a href="index.html">Emily Jones</a></h1>
+      <h1><a href="index.html">Bbosa Muhamood</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+      <h2>I'm a passionate <span>Full stack developer</span> from DUBAI</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -84,7 +78,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
+          <h3>Full stack developer &amp; UI/UX</h3>
           <p class="font-italic">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua.
@@ -92,17 +86,18 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 May 1995</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +123 456 7890</li>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : New York, USA</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 05 May 1988</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.bbosamuhamood.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +971543790184</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Dubai, UAE</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> email@example.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 32</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelors</li>
+                <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> bbosa2009@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Work:</strong> Available</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
               </ul>
             </div>
@@ -140,8 +135,8 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-live-support"></i>
-            <span data-toggle="counter-up">1,463</span>
-            <p>Hours Of Support</p>
+            <span data-toggle="counter-up">1,500+</span>
+            <p>Hours Of Coding</p>
           </div>
         </div>
 
@@ -194,21 +189,21 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
+            <span class="skill">Ruby On Rails <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+            <span class="skill">React and Redux<i class="val">70%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Photoshop <i class="val">55%</i></span>
+            <span class="skill">Python <i class="val">55%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
