added resume section in the Portifolio

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Bootstrap Template</title>
+  <title>Personal Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
       <h1><a href="index.html">Bbosa Muhamood</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Full stack developer</span> from DUBAI</h2>
+      <h2>I'm a passionate <span>Full stack developer</span> from Dubai</h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -88,7 +88,7 @@
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 05 May 1988</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.bbosamuhamood.com</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +971543790184</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +971 543 7901 84</li>
                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Dubai, UAE</li>
               </ul>
             </div>
@@ -382,11 +382,13 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Bbosa Muhamood</h4>
+            <p><em>Inspired Software Developer with 2+ years of broad experience in,
+              Back-end and Front-End Development areas with willingness to learn and master UI/UX
+              &amp; Design with NoSQL, Machine Learning and Natural Language Processing.</em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
+              <li>Al Nahda Street, Dubai, United Arab Emirates</li>
               <li>(123) 456-7891</li>
               <li>alice.barkley@example.com</li>
             </ul>
@@ -672,7 +674,7 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>A108 Adam Street, New York, NY 535022</p>
+            <p>Al Nahda Street, Dubai, United Arab Emirates</p>
           </div>
         </div>
 
@@ -694,14 +696,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>contact@example.com</p>
+            <p>bbosa2009@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+1 5589 55488 55</p>
+            <p>+971 543 7901 84</p>
           </div>
         </div>
       </div>
@@ -735,14 +737,6 @@
 
     </div>
   </section><!-- End Contact Section -->
-
-  <div class="credits">
-    <!-- All the links in the footer should remain intact. -->
-    <!-- You can delete the links only if you purchased the pro version. -->
-    <!-- Licensing information: https://bootstrapmade.com/license/ -->
-    <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
