--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
             </div>
           </div>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            Inspired Software Developer with 2+ years of broad experience in, Back-end and Front-End Development areas with willingness to learn and master UI/UX & Design with NoSQL, Machine Learning and Natural Language Processing.
           </p>
         </div>
       </div>
@@ -119,7 +118,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="icofont-simple-smile"></i>
-            <span data-toggle="counter-up">232</span>
+            <span data-toggle="counter-up">50</span>
             <p>Happy Clients</p>
           </div>
         </div>
@@ -127,7 +126,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">521</span>
+            <span data-toggle="counter-up">50</span>
             <p>Projects</p>
           </div>
         </div>
@@ -135,8 +134,8 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-live-support"></i>
-            <span data-toggle="counter-up">1,500+</span>
-            <p>Hours Of Coding</p>
+            <span data-toggle="counter-up">1,500</span>
+            <p>Hours Of Learning to Code</p>
           </div>
         </div>
 
@@ -178,11 +177,27 @@
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript <i class="val">75%</i></span>
+            <span class="skill">JavaScript, jQuery <i class="val">75%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
+
+          <div class="progress">
+            <span class="skill">Git, GitHub, Mobile/Responsive Development, RSpec, TDD,
+              Chrome Dev Tools <i class="val">90%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Database: PostgreSQL, SQL, PL/SQL, MongoDB <i class="val">70%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
 
         </div>
 
@@ -203,14 +218,27 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Python <i class="val">55%</i></span>
+            <span class="skill">Java as Junior, C#, C/C++ <i class="val">50%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Python, Django <i class="val">55%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+
+          <div class="progress">
+            <span class="skill">Professional: Remote Pair-Programming, Teamwork, Mentoring <i class="val">90%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
         </div>
-
       </div>
 
     </div><!-- End Skills -->
@@ -389,51 +417,88 @@
             <p>
             <ul>
               <li>Al Nahda Street, Dubai, United Arab Emirates</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>+971 543-790184</li>
+              <li>bbosa2009@gmail.com</li>
             </ul>
             </p>
           </div>
 
           <h3 class="resume-title">Education</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Bachelor Degree in Computer Science & IT </h4>
+            <h5>2009 - 2014</h5>
+            <p><em>Kampala University, UGANDA</em></p>
+            <p>Completed 3years Bachelor’s Degree in Computer Science and Information Technology at Kampala
+              Uganda</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <h4>Full Stack Web Development Program</h4>
+            <h5>2020 - 2021</h5>
+            <p><em>Microverse Remote School</em></p>
+            <p>Remote software development Program</p>
+            <p>Spent 1300+ hours mastering algorithms, data structures, and full-stack development while simultaneously developing projects with HTML, CSS, Bootstrap, Ruby, Rails, JavaScript, React, and Redux.</p>
+            <p>Developed skills in remote pair-programming using GitHub, industry-standard Gitlow, and daily standups to communicate and collaborate with international remote developers.</p>
           </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Junior Software Developer</h4>
+            <h5>2020 - present</h5>
+            <p><em>Emirates Telecom Company - Etisalat, Dubai, UAE</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Developing, design and implementation of the new API endpoints as a part of
+              high-volume external web app, that provided critical connectivity channel for
+              distributed functionality and increase system cohesion keeping manageable code
+              complexity.</li>
+              <li>Handling full stack programming tasks for the development of the high-volume
+              online service (PL/SQL), resulting in consistent deployment of 10 major products
+              updates.</li>
+              <li>Improving product aesthetic and UX of the high-volume external web app,
+              resulting in increase in user’s retention.</li>
+
+              <li>Migration of the existing DEV/USR/PRD environments to the cloud for the critical
+              external web app that helped to achieve decrease in infrastructure operating
+              costs.</li>
+              <li>Optimizing legacy data storages and search queries for the critical external web
+              app using PL/SQL improving system&#39;s response time.</li>
+              <li>Performing unit &amp; load testing for the mission-critical external web app
+              eliminating system&#39;s failure.</li>
+              <li>Managed 5 projects at a given time while under pressure</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Specialist Technical Clients Support</h4>
+            <h5>2017 - 2020</h5>
+            <p><em>Emirates Telecom Company - Etisalat, Dubai, UAE </em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>International Roaming Specialist assisting clients on all technical issues and Trainings</li>
+              <li>Execution of Windows &amp; MAC OS deployments.</li>
+              <li>Ensure adherence to defined organizational processes for continued consistency of IT
+              services delivery</li>
+              <li>Troubleshooting Network and Servers</li>
+              <li>Act as first point of contact into IT organization for Any Desktop/Technical Support</li>
+              <li>Installed, upgraded, supported and troubleshot Windows Operating Systems and Microsoft
+              Office suite, and other applications as assigned.</li>
+              <li>Performed general preventative maintenance tasks on computers, laptops, printers and any
+              other authorized equipment</li>
+              <li>Performed remedial repairs on computers, laptops, printers and any other authorized
+              peripheral equipment</li>
+              <li>Collaborate in conducting end user surveys and create action plans, as required</li>
+              <li>Responsible for monitoring of critical systems, and support resolution of critical/non-critical</li>
+              incidents</li>
+              <li>Responsible for developing and establishing digital workplace and device strategy to drive
+              workplace collaboration, optimal device imaging and support for internal and international
+              operations, for all devices including desktops, laptops, mobile devices.</li>
+              <li>Successful resolution of trouble tickets in a high-volume call center</li>
+              <li>Provided first line support for customer inquiries, problems, and/or requests including web
+              portal</li>
+              <li>Provided desktop/network support to 800+ corporate users</li>
+              <li>Support on requirement and systems analysis efforts, including translating business
+              requirements</li>
             </ul>
             </p>
           </div>
