adding details pages

--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <!-- <li data-filter="*" class="filter-active">All</li> -->
+           <!-- <li data-filter="*" class="filter-active">All</li> -->
             <li data-filter=".filter-app">Full Stack</li>
             <li data-filter=".filter-card">Front End</li>
             <!-- <li data-filter=".filter-web">Back End</li> -->
@@ -608,7 +608,7 @@
           </div>
         </div>
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+         <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -620,16 +620,16 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>-->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>LinkedIn Clone</h4>
-              <p>A Clone of LinkedIn website</p>
+              <h4>Social Media Apps</h4>
+              <p>A Clone of Social Media website</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/image1.png" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -650,7 +650,7 @@
           </div>
         </div>
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+         <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -662,7 +662,7 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>-->
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
@@ -682,8 +682,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>School Search Database </h4>
-              <p>The Microverse "Capstone Project"</p>
+              <h4>News Week Clone </h4>
+              <p>The Microverse "News Week Clone" website using Bootstrap</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -696,8 +696,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Newsweek Clone</h4>
-              <p>The Microverse "Using Bootstrap"</p>
+              <h4>A Responsive School Website</h4>
+              <p>The Microverse Capstone "Using HTML and CSS"</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -706,7 +706,7 @@
           </div>
         </div>
 
-        <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+         <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
@@ -718,12 +718,14 @@
               </div>
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
 
-    </div>
-  </section><!-- End Portfolio Section -->
+    </div>-->
+  </section>
+  
+  <!-- End Portfolio Section -->
 
   <!-- ======= Contact Section ======= -->
   <section id="contact" class="contact">
@@ -749,11 +751,9 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
-              <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
-              <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="icofont-skype"></i></a>
-              <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+              <a href="https://twitter.com/croixtechfirm" class="twitter"><i class="icofont-twitter"></i></a>
+              <a href="https://github.com/bmuhamood" class="instagram"><i class="icofont-github"></i></a>
+              <a href="https://www.linkedin.com/in/bbosa-muhamood-06845576/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
           </div>
         </div>
