--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -42,22 +42,20 @@
           <div class="col-lg-8">
             <h2 class="portfolio-title">Portfolio details</h2>
             <div class="owl-carousel portfolio-details-carousel">
-              <img src="assets/img/portfolio/home.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/portfolio--1.jpg" class="img-fluid" alt="">
-              <img src="assets/img/portfolio/Screen Shot 2021-01-29 at 10.44.52.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-4 portfolio-info">
             <h3>Project information</h3>
             <ul>
-              <li><strong>Category</strong>: Web design</li>
-              <li><strong>Github</strong>: <a href="#">https://github.com/bmuhamood/twitter_redesign.git</a></li>
-              <li><strong>Project URL</strong>: <a href="#">https://frozen-springs-34641.herokuapp.com/</a></li>
+              <li><strong>Category</strong>: School Search Database</li>
+              <li><strong>Github</strong>: <a href="#">https://github.com/bmuhamood/Potashule-Solo-Project.git</a></li>
+              <li><strong>Project URL</strong>: <a href="#">https://bmuhamood.github.io/Potashule-Solo-Project/</a></li>
             </ul>
 
             <p>
-              This is a Capstone project of clone of Twitter design from Gregoire Vella , in this project you have some of the basic features and I add a different ones, you can create your user, follow people and be followed, you can post whatever you want like how you feel today , some of the extra features is the comments part that it is after every posts in the home page, also you can like or dislike a posts and you will se the number of likes that a post have.
+              School Search Database The Microverse "Capstone Project" practice that consist of creating a web app that acts as a schools school/lisiting for parents..
             </p>
           </div>
 
