--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     </div><!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <!-- <div class="testimonials container">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -392,7 +392,7 @@
 
       </div>
 
-    </div>
+    </div> -->
     <!-- End Testimonials  -->
 
   </section>
